# Twitter-Streaming

./: .gitignore  dockerfile  main.tf  pyproject.toml  variables.tf
app/: config.py  twitter_streaming.py
function/: main.py  requirements.txt
function/repository/: ElasticSearch.py
function/utils/: message_helper.py  tweet_util.py
tests/: test_app.py
twitter_pubsub/: app.py  config.py
