[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sambit <sambitkickers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.18.0"
google-cloud-pubsub = "^2.6.0"
loguru = "^0.5.3"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
